# C610-PoseDetection-demo

./: README.docx  README.md
doc/: QCS610-PoseDetection-demo-doc.docx
pose_detection/: CMakeLists.txt  weston_dp_client
pose_detection/examples/pose_body25/: CMakeLists.txt  boadypacket.hpp  body25.cpp  param_parse.hpp
pose_detection/gst_pipe/: CMakeLists.txt  bufmanager.hpp  converformat.hpp  gstcamera.hpp  gstlocal.hpp  gstpipe.hpp  gstpipefactory.hpp  gstrtsp.hpp  gsttest.cpp  publicattr.h
pose_detection/inference/: publicattr.h
pose_detection/inference/snpe/: CMakeLists.txt  snpe_test.cpp
pose_detection/inference/snpe/RunSnpe/: common.h  inference.hpp
pose_detection/pb_conf/: gstreamer.pb.cc  gstreamer.pb.h  gstreamer.proto  pb_test  pb_test.cpp
pose_detection/pb_conf/libs/: libprotobuf-lite.so.13.0.0  libprotobuf.so.13.0.0
